readme.txt updated with some design notes.

--- a/Conquest-Competition/batch-fight.properties
+++ b/Conquest-Competition/batch-fight.properties
@@ -1,3 +1,5 @@
 BotStarter=internal:conquest.bot.BotStarter
 AggressiveBot=dir;process:../Conquest-Bots;java -cp ./bin/;../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.AggressiveBot
 2015-ZdenekTesar=dir;process:./bots/2015/ZdenekTesar/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.ZdenekTesarBot
+2015-TomasHromada=dir;process:./bots/2015/TomasHromada/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.GBot
+2015-PetrBelohlavek=dir;process:./bots/2015/PetrBelohlavek/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.PetrbelBot
