Adding support for GameStateCompact representation (flag int arrays suitable for searches).

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,17 @@ replay.log
 /Conquest-Bots/FightSimulation-Defenders-A500-D500.obj
 /Conquest-Bots/FightSimulationExact-A50-D50.obj
 /Conquest-Tournament/bin
+/.recommenders
+/Conquest-Competition/evaluate-2015-ErdiIzgi.bat
+/Conquest-Competition/evaluate-2015-FedericoForti.bat
+/Conquest-Competition/evaluate-2015-FilipSedivy.bat
+/Conquest-Competition/evaluate-2015-JakubNaplava.bat
+/Conquest-Competition/evaluate-2015-JanKluj.bat
+/Conquest-Competition/evaluate-2015-JiriMarek.bat
+/Conquest-Competition/evaluate-2015-JiriVytasil.bat
+/Conquest-Competition/evaluate-2015-LubomirOhman.bat
+/Conquest-Competition/evaluate-2015-MartinMirbauer.bat
+/Conquest-Competition/evaluate-2015-MartinStrupek.bat
+/Conquest-Competition/evaluate-2015-MichalFilippi.bat
+/Conquest-Competition/evaluate-2015-MikulasZelinka.bat
+/Conquest-Competition/evaluate-2015-VojtechHudecek.bat
