AI infrastructure improvements: a) GameState.swapPlayers() ... you may swap ME <=> OPPONENT easily b) xxxCommand now have apply(GameState) so you can easily simulate commands over GameState

--- a/Conquest-Competition/batch-fight.properties
+++ b/Conquest-Competition/batch-fight.properties
@@ -1,2 +1,18 @@
 BotStarter=internal:conquest.bot.BotStarter
 AggressiveBot=dir;process:../Conquest-Bots;java -cp ./bin/;../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.AggressiveBot
+2015-ZdenekTesar=dir;process:./bots/2015/ZdenekTesar/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.ZdenekTesarBot
+2015-TomasHromada=dir;process:./bots/2015/TomasHromada/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.GBot
+2015-PetrBelohlavek=dir;process:./bots/2015/PetrBelohlavek/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.PetrbelBot
+;2015-JiriVytasil=dir;process:./bots/2015/JiriVytasil/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.MyBot
+2015-MartinStrupek=dir;process:./bots/2015/MartinStrupek/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.BunnyBot
+2015-JanKluj=dir;process:./bots/2015/JanKluj/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.SmartBot
+2015-MikulasZelinka=dir;process:./bots/2015/MikulasZelinka/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.OPBot
+2015-JakubNaplava=dir;process:./bots/2015/JakubNaplava/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.MyBot
+2015-JiriMarek=dir;process:./bots/2015/JiriMarek/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.ImprovedAggressiveBot
+2015-MartinMirbauer=dir;process:./bots/2015/MartinMirbauer/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.AggressiveBot2
+2015-LubomirOhman=dir;process:./bots/2015/LubomirOhman/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.BotMax
+2015-VojtechHudecek=dir;process:./bots/2015/VojtechHudecek/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.CleverBot
+;2015-MichalFilippi=dir;process:./bots/2015/MichalFilippi/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.MyBot
+2015-ErdiIzgi=dir;process:./bots/2015/ErdiIzgi/Conquest-Bots;java -cp ./bin/;libs/coollection-0.2.0.jar;libs/stream-1.1.2.jar;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.SecondChanceBot
+2015-FedericoForti=dir;process:./bots/2015/FedericoForti/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.SmartBot
+2015-FilipSedivy=dir;process:./bots/2015/FilipSedivy/Conquest-Bots;java -cp ./bin/;../../../../../Conquest/bin/ conquest.bot.external.JavaBot conquest.bot.custom.MyBotFS
